added refresh token, lecture details and many more

--- a/E-Platform/src/Components/VideoSidebar/VideoSidebar.css
+++ b/E-Platform/src/Components/VideoSidebar/VideoSidebar.css
@@ -24,6 +24,11 @@
   margin-bottom: 16px;
 }
 
+.sidebar a{
+  text-decoration: none;
+  color: black;
+}
+
 /* Card styling for each lecture */
 .lecture-card {
   background-color: #ffffff;
