--- a/E-Platform/src/pages/ProfilePage/profilepage.css
+++ b/E-Platform/src/pages/ProfilePage/profilepage.css
@@ -140,3 +140,27 @@
 .continue-btn:hover {
     background-color: #0056b3;
 }
+
+
+.courses-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.add-course-btn {
+    background-color: #28a745;
+    color: white;
+    border: none;
+    padding: 8px 16px;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 16px;
+    transition: background-color 0.3s ease;
+}
+
+.add-course-btn:hover {
+    background-color: #218838;
+}
+
