--- a/E-Platform/src/Components/CreateCourse/CreateCourse.css
+++ b/E-Platform/src/Components/CreateCourse/CreateCourse.css
@@ -113,7 +113,7 @@
   }
   
   .courseCreate-imageUpload input {
-    display: none; /* Hide default file input */
+    opacity: 0;
   }
   
   .courseCreate-imagePreview {
