--- a/E-Platform/src/Components/Loader/Loader.css
+++ b/E-Platform/src/Components/Loader/Loader.css
@@ -2,7 +2,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 100%;
+    width: 100%;
     background-color: #f3f4f6;
   }
   
