implementing payment gateway

--- a/api/static/templates/password_reset_email.html
+++ b/api/static/templates/password_reset_email.html
@@ -47,7 +47,7 @@
         </p>
 
         <p>If the button above doesn't work, copy and paste this link into your browser:</p>
-        <p><a href="{{ data.domain }}password_reset/token={{ data.token }}">{{ data.domain }}password_reset/token={{ data.token }}</a></p>
+        <p><a href="{{ data.domain }}password_reset/token={{ data.token }}">{{ data.domain }}gitpassword_reset/token={{ data.token }}</a></p>
 
         <p>This link will expire in <strong>{{ data.expiry }}</strong> minutes for your security.</p>
 
